--- a/maquetado/trainningApp.html
+++ b/maquetado/trainningApp.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
-<html>
   <head>
+<html>
     <link rel="stylesheet" href="css/equalizer.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> 
   </head>
   <body class="container">
     <div class="main">
       <img src="images/phone.png" class="phone-image">
       <div class="separator"></div>
       <img src="images/tcg_logo.png" class="logo-image">
+    </div>
+    <div class="features">
+      <div class="feature">
+        <img src="images/ic_list.png">
+        <b class="bold">Keep track of your money</b>
+        <b class="description">See all the debts and all<br> your friends debts towards<br> you.</b>
+      </div>
+      <div class="feature">
+        <img src="images/ic_safe.png">
+        <b class="bold">Generate reminders</b>
+        <b class="description">Get reminded of who ows<br> you money or who you owe<br> money to.</b>
+      </div>
+      <div class="feature">
+        <img src="images/ic_reminder.png">
+        <b class="bold">No internet needed</b>
+        <b class="description">All your debts are kept<br> safe in your phone.</b>
+      </div>
+    </div>
+
   </body>
 </html>
