--- a/maquetado/trainningApp.html
+++ b/maquetado/trainningApp.html
@@ -5,10 +5,32 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body class="container">
+
     <div class="top-bar"></div>
+
     <div class="principal">
       <img src="images/phone.png" class="phone-image">
       <div class="separator"></div>
       <img src="images/tcg_logo.png" class="logo-image">
+    </div>
+
+    <div class="features">
+      <div class="feature">
+        <img src="images/ic_list.png">
+        <b class="bold">Keep track of your money</b>
+        <b class="description">See all the debts and all your friends debts towards you.</b>
+      </div>
+      <div class="feature">
+        <img src="images/ic_safe.png">
+        <b class="bold">Generate reminders</b>
+        <b class="description">Get reminded of who ows you money or who you owe money to.</b>
+      </div>
+      <div class="feature">
+        <img src="images/ic_reminder.png">
+        <b class="bold">No internet needed</b>
+        <b class="description">All your debts are kept safe in your phone.</b>
+      </div>
+    </div>
+
   </body>
 </html>
