--- a/maquetado/trainningApp.html
+++ b/maquetado/trainningApp.html
@@ -18,17 +18,17 @@
       <div class="feature">
         <img src="images/ic_list.png">
         <b class="bold">Keep track of your money</b>
-        <b class="description">See all the debts and all your friends debts towards you.</b>
+        <b class="description">See all the debts and all<br> your friends debts towards<br> you.</b>
       </div>
       <div class="feature">
         <img src="images/ic_safe.png">
         <b class="bold">Generate reminders</b>
-        <b class="description">Get reminded of who ows you money or who you owe money to.</b>
+        <b class="description">Get reminded of who ows<br> you money or who you owe<br> money to.</b>
       </div>
       <div class="feature">
         <img src="images/ic_reminder.png">
         <b class="bold">No internet needed</b>
-        <b class="description">All your debts are kept safe in your phone.</b>
+        <b class="description">All your debts are kept<br> safe in your phone.</b>
       </div>
     </div>
 
