--- a/maquetado/trainningApp.html
+++ b/maquetado/trainningApp.html
@@ -32,5 +32,11 @@
       </div>
     </div>
 
+    <div class="footer">
+        <b class="footer-text">Get info on new updates</b>
+        <input type="email" class="email">
+        <button type="button" class="button">Subscribe</button>
+    </div>
+
   </body>
 </html>
