Changed font style

--- a/maquetado/trainningApp.html
+++ b/maquetado/trainningApp.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" href="css/equalizer.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   </head>
   <body class="container">
 
