--- a/maquetado/trainningApp.html
+++ b/maquetado/trainningApp.html
@@ -5,8 +5,7 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body class="container">
-    <div class="top-bar"></div>
-    <div class="principal">
+    <div class="main">
       <img src="images/phone.png" class="phone-image">
       <div class="separator"></div>
       <img src="images/tcg_logo.png" class="logo-image">
