Changs for PR and added triangles

--- a/maquetado/trainningApp.html
+++ b/maquetado/trainningApp.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
   <head>
 <html>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="css/equalizer.css">
     <link rel="stylesheet" href="css/styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> 
   </head>
   <body class="container">
     <div class="main">
@@ -13,19 +13,19 @@
     </div>
     <div class="features">
       <div class="feature">
-        <img src="images/ic_list.png">
-        <b class="bold">Keep track of your money</b>
-        <b class="description">See all the debts and all<br> your friends debts towards<br> you.</b>
+        <img class="feature-image" src="images/ic_list.png">
+        <h1 class="title">Keep track of your money</h1>
+        <p class="description">See all the debts and all<br> your friends debts towards<br> you.</p>
       </div>
       <div class="feature">
-        <img src="images/ic_safe.png">
-        <b class="bold">Generate reminders</b>
-        <b class="description">Get reminded of who ows<br> you money or who you owe<br> money to.</b>
+        <img class="feature-image" src="images/ic_safe.png">
+        <h1 class="title">Generate reminders</h1>
+        <p class="description">Get reminded of who ows<br> you money or who you owe<br> money to.</p>
       </div>
       <div class="feature">
-        <img src="images/ic_reminder.png">
-        <b class="bold">No internet needed</b>
-        <b class="description">All your debts are kept<br> safe in your phone.</b>
+        <img class="feature-image" src="images/ic_reminder.png">
+        <h1 class="title">No internet needed</h1>
+        <p class="description">All your debts are kept<br> safe in your phone.</p>
       </div>
     </div>
 
