--- a/maquetado/trainningApp.html
+++ b/maquetado/trainningApp.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
   <head>
+<html>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="css/equalizer.css">
     <link rel="stylesheet" href="css/styles.css">
   </head>
@@ -9,5 +10,24 @@
       <img src="images/phone.png" class="phone-image">
       <div class="separator"></div>
       <img src="images/tcg_logo.png" class="logo-image">
+    </div>
+    <div class="features">
+      <div class="feature">
+        <img class="feature-image" src="images/ic_list.png">
+        <h1 class="title">Keep track of your money</h1>
+        <p class="description">See all the debts and all<br> your friends debts towards<br> you.</p>
+      </div>
+      <div class="feature">
+        <img class="feature-image" src="images/ic_safe.png">
+        <h1 class="title">Generate reminders</h1>
+        <p class="description">Get reminded of who ows<br> you money or who you owe<br> money to.</p>
+      </div>
+      <div class="feature">
+        <img class="feature-image" src="images/ic_reminder.png">
+        <h1 class="title">No internet needed</h1>
+        <p class="description">All your debts are kept<br> safe in your phone.</p>
+      </div>
+    </div>
+
   </body>
 </html>
